<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/back_to_stations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/back_to_main_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add_stantion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="7dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="55dp" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/done" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:inputType="text"
        android:hint="@string/search"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/getFavourite" />



</FrameLayout>